Refactored packet sniffer to implement custom struct (struct PacketData) which contains and aggregates all important data from each sniffed packet, further implemented logger logic that takes FILE handle and struct PacketData pointer as args and subsequently logs packet data within 'logs.txt' file. Next steps: Further refactor and implement logic to allow user to select the type of traffic to sniff (ie: HTTPS-Port 443, SSH-Port 22, FTP-Port 21).

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-# idea file
+# .gitignore file removes files from version control
 
-idea.txt 
+# config object file
+config.o
+
+# main object file
+main.o
+
+.vscode
 
 # logs file
-
 logs.txt
+
